# AoC2024

./: .gitignore  Cargo.toml  README.md  benchmarks.txt  day-07.bench.txt  day-08.bench.txt  day-09.bench.txt  day-10.bench.txt  day-11.bench.txt  day-14.bench.txt  day-15.bench.txt  day-16.bench.txt  day-17.bench.txt  day-18.bench.txt  day-19.bench.txt  day-20.bench.txt  day-21.bench.txt  day-22.bench.txt  justfile
day-01/src/: part1.rs  part2.rs
day-02/src/: part1.rs  part2.rs
day-03/: Cargo.toml
day-03/src/: part1.rs  part2.rs
day-04/: Cargo.toml
day-04/src/: part1.rs  part2.rs
day-05/src/: part1.rs  part2.rs
day-06/: Cargo.toml
day-06/benches/: benchmarks.rs
day-06/src/: part1.rs  part2.rs
day-07/: Cargo.toml
day-07/benches/: benchmarks.rs
day-07/src/: lib.rs  part1.rs  part2.rs  part2_claude.rs
day-08/: Cargo.toml
day-08/src/: part1.rs  part2.rs
day-09/: Cargo.toml
day-09/benches/: benchmarks.rs
day-09/src/: part1.rs  part2.rs
day-10/: Cargo.toml
day-10/benches/: benchmarks.rs
day-10/src/: part1.rs  part2.rs
day-11/: Cargo.toml
day-11/benches/: benchmarks.rs
day-11/src/: lib.rs  part1.rs  part1_claude.rs  part2.rs  part2_analyze.rs  part2_claude.rs
day-12/: Cargo.toml
day-12/benches/: benchmarks.rs
day-12/src/: lib.rs  part1.rs  part1_claude.rs  part2.rs
day-13/: Cargo.toml
day-13/benches/: benchmarks.rs
day-14/: Cargo.toml
day-15/: Cargo.toml
day-16/: Cargo.toml
day-17/: Cargo.toml
day-18/: Cargo.toml
day-19/: Cargo.toml
day-20/: Cargo.toml
day-21/: Cargo.toml  temp.txt
day-22/: Cargo.toml
(+31 files in other folders)
